# finge-rs

./: .gitignore  Cargo.toml  Fingers.json  Model-edgedetectors.bc  Model-interesting.bc  Network.json
src/: lib.rs  main.rs  mnist.rs  nn.rs  program_args.rs
